Version 0.7-11 (??-??-2012, Rev. 13??)
=====================================

- Stated at more places what parametric tests do and 
  which prerequisites must be met.
  
- Parametric tests for the two-sided test case.

- Round output of power simulations to level of precision.

- When graphs are saved from the GUI the slot graph@m is now
  always numeric when no variables are involved.  

Version 0.7-10 (15-06-2012, Rev. 1291)
=====================================

- New self test function doUnitTestsForGMCP to check whether
  the R unit test suite for gMCP can complete without errors.

- To reduce problems for older systems our C code does not contain 
  any C99 features any more. (For R > 2.12 an ISO C99 C compiler is 
  required. For older systems this was not the case.)
  
- Added option "exhaustAlpha" directly to the gMCP function to allow 
  non-alpha-exhaustive parametric tests. Also a note is given
  if exhaustAlpha=TRUE would change the result.  
  
   18 files changed, 137 insertions(+), 47 deletions(-)


Version 0.7-9 (07-05-2012, Rev. 1277)
=====================================

- calcPower gained a parameter "cr" for specifying
  a correlation for parametric power simulations. 

- Added option to allow non-alpha-exhaustive parametric tests.

- Improved dialog in GUI for power simulations, 
  including multiple settings for power analysis.

- Improved font size adjustment for edge labels.

- Show syntax error instead of infinite loop if an unparseable edge weight is entered. 

 33 files changed, 720 insertions(+), 190 deletions(-)
 

Version 0.7-8 (06-03-2012, Rev. 1252)
=====================================

- Edges can be created by drag'n'drop. 
  (Drag from the first node and drop on the second node.)
  
- Button to add edges stays pressed down until it is pressed again (or edges are added).
  This allows faster creation of graphs with many nodes.

- Fixed (unproblematic but annoying) NullPointerException with drag'n'drop
  introduced in 0.7-7.
