@@ -10,6 +10,10 @@ Version 0.7-11 (??-??-2012, Rev. 13??)
 
 - When graphs are saved from the GUI the slot graph@m is now
   always numeric when no variables are involved.  
+  
+- Extended unit tests. See method unitTestsGMCP.
+  Option extended=TRUE will run small power simulations.
+  Option java=TRUE will run JUnit tests for GUI testing.
 
 Version 0.7-10 (15-06-2012, Rev. 1291)
 =====================================
